# cargo-ffi

./: .gitignore  Cargo.toml  Makefile  README.md  cbindgen.toml  rustfmt.toml
docs/: api.md  arch2.md  architecture.md  channels.md  temp1.md
examples/: gtk.rs  hello_world.rs  rust_example.rs
examples/cairo/: compositor.rs  main.rs
examples/egui_vello/: compositor.rs  main.rs  tiling.rs
examples/gtk/: main.rs  tiling.rs
examples/gtk_cairo/: compositor.rs  main.rs
src/: config.rs  engine.rs  errors.rs  event.rs  ffi.rs  instance.rs  lib.rs  net.rs  render.rs  tab.rs  tabgroup.rs  tick.rs  viewport.rs  zone.rs
src/engine/: config.rs  context.rs  cookies.rs  engine.rs  errors.rs  event.rs  events.rs  handle.rs  instance.rs  storage.rs  tab.rs  tick.rs  zone.rs  zone_builder.rs
src/engine/cookies/: cookie_jar.rs  cookies.rs  persistent_cookie_jar.rs  store.rs
src/engine/cookies/store/: in_memory.rs  json.rs  sqlite.rs
src/engine/storage/: area.rs  event.rs  service.rs  types.rs
src/engine/storage/local/: in_memory.rs  sqlite_store.rs
src/engine/storage/session/: in_memory.rs
src/engine/tab/: builder.rs  handle.rs  options.rs  services.rs  structs.rs  tab.rs  worker.rs
src/engine/zone/: config.rs  cookies.rs  handle.rs  manager.rs  password_store.rs  storage.rs  zone.rs
src/engine/zone/cookies/: cookie_jar.rs  cookie_store.rs  persistent_cookie_jar.rs
src/engine/zone/cookies/cookie_store/: json.rs  sqlite.rs
src/net/: fetch.rs  response.rs
src/old/: framebuffer.rs
src/render/: backend.rs  backends.rs  compositor.rs  render_list.rs  viewport.rs
src/render/backends/: cairo.rs  null.rs  vello.rs
src/render/backends/vello/: font_cache.rs  font_manager.rs  text_renderer.rs
