[package]
name = "gosub-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "gosub_engine"
crate-type = ["cdylib", "rlib"]

[[example]]
name = "gtk_example"
path = "examples/gtk.rs"
required-features = ["gtk"]

[dependencies]
ffi-support = "0.4"       # For C-compatible string management
gtk4 = { version = "0.7", optional = true }
uuid = {  version = "1.17.0", features = ["v4"] }
reqwest = { version = "0.12.22", features = ["json", "gzip", "brotli", "deflate", "cookies", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0.69"
rand = "0.9.2"
futures = { version = "0.3", features = ["executor"] }

[features]
default = []
gtk = ["gtk4"]