[package]
name = "gosub-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "gosub_engine"
crate-type = ["cdylib", "rlib"]

[[example]]
name = "gtk_example"
path = "examples/cairo/main.rs"
required-features = ["backend_cairo"]

[dependencies]
uuid = {  version = "1.17.0", features = ["v4", "serde"] }
reqwest = { version = "0.12.22", features = ["json", "gzip", "brotli", "deflate", "cookies", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0.69"
rand = "0.9.2"
futures = { version = "0.3", features = ["executor"] }
anyhow = "1.0.98"
http = "1.3.1"
url = "2.5.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
r2d2 = { version = "0.8", optional = true }
r2d2_sqlite = { version = "0.24", optional = true }
gtk4 = { version = "0.7", optional = true }
skia-safe = { version = "0.87.0", optional = true }
wgpu = { version = "0.19", optional = true }
vello = { version = "0.5.0", optional = true }
log = "0.4.27"
cairo-rs = { version = "0.21.1", optional = true }

[features]
default = ["sqlite_cookie_store", "backend_cairo"]
sqlite_cookie_store = ["r2d2", "r2d2_sqlite"]
backend_cairo = ["dep:gtk4", "dep:cairo-rs"]
backend_vello = ["dep:wgpu", "dep:vello"]
backend_skia  = ["dep:skia-safe"]
